modify test makefile

--- a/mytest/Makefile
+++ b/mytest/Makefile
@@ -1,7 +1,7 @@
 all:
-	../llvm/build/bin/clang++ simple_race.cc -fsanitize=thread -fPIE -pie -g
+	../../../../../build/bin/clang++ simple_race.cc -fsanitize=thread -fPIE -pie -g
 ori:
-	../llvm_ori/build/bin/clang++ simple_race.cc -fsanitize=thread -fPIE -pie -g
+	../../../../../build_ori/bin/clang++ simple_race.cc -fsanitize=thread -fPIE -pie -g
 clean:
 	rm ./a.out
 
