--- a/mytest/Makefile
+++ b/mytest/Makefile
@@ -6,7 +6,7 @@ dataflow:
 	../../../../../build/bin/clang -fsanitize=dataflow test_dfsan.c -o test_dfsan
 	../../../../../build/bin/clang -emit-llvm -fsanitize=dataflow test_dfsan.c -o test_dfsan.ll -S
 	../../../../../build/bin/clang -emit-llvm -fsanitize=dataflow input_controlled_loop.c -o input_controlled_loop.ll -S -g
-	../../../../../build/bin/opt -load ../../../../../build/lib/WindowDataFlow.so -WindowDataFlow -stats -WindowBeginLocation=/home/mateus/reliable/llvm/projects/compiler-rt/lib/tsan/mytest/input_controlled_loop.c:19:5 -WindowEndLocation=/home/mateus/reliable/llvm/projects/compiler-rt/lib/tsan/mytest/input_controlled_loop.c:32:5 input_controlled_loop.ll -S > input_controlled_loop_instrumented.ll
+	../../../../../build/bin/opt -loops -load ../../../../../build/lib/WindowDataFlow.so -WindowDataFlow -stats -WindowBeginLocation=/home/mateus/reliable/llvm/projects/compiler-rt/lib/tsan/mytest/input_controlled_loop.c:19:5 -WindowEndLocation=/home/mateus/reliable/llvm/projects/compiler-rt/lib/tsan/mytest/input_controlled_loop.c:32:5 input_controlled_loop.ll -S > input_controlled_loop_instrumented.ll
 	../../../../../build/bin/clang -fsanitize=dataflow -emit-llvm ../../../../../lib/Transforms/llvm-windowrtl/runtime/runtime.c -o runtime_dataflowed.ll -S
 	../../../../../build/bin/llvm-link input_controlled_loop_instrumented.ll runtime_dataflowed.ll -S > linked.ll
 	../../../../../build/bin/clang -fsanitize=dataflow linked.ll -o linked
